--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="pure-u-1">
         <div class="page-title" style="margin-top: 20px">
-          Gross Domestic Product (GDP)
+          GROSS DOMESTIC PRODUCT (GDP)
         </div>
       </div>
 
@@ -80,7 +80,7 @@
           <div class="pure-u-1-8">
             <img
               src="1.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-3-4">
@@ -97,7 +97,7 @@
           <div class="pure-u-1-8">
             <img
               src="2.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-3-4">
@@ -114,7 +114,7 @@
           <div class="pure-u-1-8" style="margin-left: -55px">
             <img
               src="3.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-1-2" style="margin-left: -55px">
@@ -131,7 +131,7 @@
           <div class="pure-u-1-8" style="margin-left: -55px">
             <img
               src="4.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-1-2" style="margin-left: -55px">
@@ -148,7 +148,7 @@
           <div class="pure-u-1-8">
             <img
               src="5.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-3-4">
@@ -165,7 +165,7 @@
           <div class="pure-u-1-8">
             <img
               src="6.png"
-              style="width: 100%; max-width: 50px; display: block; margin: auto"
+              style="width: 100%; max-width: 45px; display: block; margin: auto"
             />
           </div>
           <div class="pure-u-3-4">
