Add visualization files and supporting documents

--- a/index.html
+++ b/index.html
@@ -42,165 +42,197 @@
   </head>
 
   <body>
-    <div class="pure-g">
-      <div class="pure-u-1-2 footer">
-        <div class="pure-u-3-4" style="margin-left: 130%">
-          <p>
-            Yee Khai Wei | 32846398 | Tutorial 03 | Dr Grace Ting Chai Wen |
-            Data Visualisation 2 | 2024
-          </p>
-        </div>
-      </div>
-
-      <div class="pure-u-1">
-        <div class="page-title" style="margin-top: 20px">
-          GROSS DOMESTIC PRODUCT (GDP)
-        </div>
-      </div>
-
-      <div class="pure-u-1-2">
-        <div class="pure-u-1-8"></div>
-        <div class="pure-u-3-4" style="margin-left: -1%">
-          <div class="page-title-description">Explanation A</div>
-          <div class="page-title-description">Explanation B</div>
-        </div>
-      </div>
-      <div class="pure-u-1-2">
-        <div class="pure-u-1-8"></div>
-        <div class="pure-u-3-4" style="margin-left: -6%">
-          <div class="page-title-description">Explanation C</div>
-          <div class="page-title-description">Explanation D</div>
-        </div>
-      </div>
-
-      <div class="line-break"></div>
-
-      <div class="content">
-        <div class="pure-u-1-2 idiom">
-          <div class="pure-u-1-8">
-            <img
-              src="1.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
+    <div class="container">
+      <div class="pure-g">
+        <div class="pure-u-1-2 footer">
+          <div class="pure-u-3-4" style="margin-left: 115%">
+            <p>
+              Yee Khai Wei | 32846398 | Tutorial 03 | Dr Grace Ting Chai Wen |
+              Data Visualisation 2 | 2024
+            </p>
           </div>
+        </div>
+
+        <div class="pure-u-1">
+          <div class="page-title" style="margin-top: 20px">
+            GROSS DOMESTIC PRODUCT (GDP)
+          </div>
+        </div>
+
+        <div class="pure-u-1-2">
+          <div class="pure-u-1-8"></div>
+          <div class="pure-u-3-4" style="margin-left: -14%">
+            <div class="page-title-description">Explanation A</div>
+            <div class="page-title-description">Explanation B</div>
+          </div>
+        </div>
+        <div class="pure-u-1-2">
+          <div class="pure-u-1-8"></div>
+          <div class="pure-u-3-4" style="margin-left: -28%">
+            <div class="page-title-description">Explanation C</div>
+            <div class="page-title-description">Explanation D</div>
+          </div>
+        </div>
+
+        <div class="line-break"></div>
+
+        <div class="content">
+          <div class="pure-u-1-2 idiom">
+            <div class="pure-u-1-8">
+              <img
+                src="1.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-3-4">
+              <div class="idiom-title">CHOROPLETH MAP</div>
+              <div class="idiom-subtitle">Explanation E</div>
+              <div
+                id="choropleth_map"
+                style="margin-left: -0.5%; margin-top: -70px"
+              ></div>
+            </div>
+          </div>
+
+          <div class="pure-u-1-2 idiom">
+            <div class="pure-u-1-8">
+              <img
+                src="2.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-3-4">
+              <div class="idiom-title">BUBBLE PLOT</div>
+              <div class="idiom-subtitle">Explanation F</div>
+              <div
+                id="bubble_plot"
+                style="margin-left: -0.5%; margin-top: 10px"
+              ></div>
+            </div>
+          </div>
+
+          <div class="pure-u-1-1 idiom">
+            <div class="pure-u-1-8" style="margin-left: -55px">
+              <img
+                src="3.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-1-2" style="margin-left: -55px">
+              <div class="idiom-title">BUMP CHART</div>
+              <div class="idiom-subtitle">Explanation G</div>
+              <div
+                id="bump_chart"
+                style="margin-left: -0.5%; margin-top: 10px"
+              ></div>
+            </div>
+          </div>
+
+          <div class="pure-u-1-1 idiom">
+            <div class="pure-u-1-8" style="margin-left: -55px">
+              <img
+                src="4.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-1-2" style="margin-left: -55px">
+              <div class="idiom-title">LINE CHART</div>
+              <div class="idiom-subtitle">Explanation H</div>
+              <div
+                id="line_chart"
+                style="margin-left: -0.5%; margin-top: 10px"
+              ></div>
+            </div>
+          </div>
+
+          <div class="pure-u-1-2 idiom">
+            <div class="pure-u-1-8">
+              <img
+                src="5.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-3-4">
+              <div class="idiom-title">STACKED CHART</div>
+              <div class="idiom-subtitle">Explanation I</div>
+              <div
+                id="stacked_chart"
+                style="margin-left: -0.5%; margin-top: 10px"
+              ></div>
+            </div>
+          </div>
+
+          <div class="pure-u-1-2 idiom" ; style="margin-bottom: -100px">
+            <div class="pure-u-1-8">
+              <img
+                src="6.png"
+                style="
+                  width: 100%;
+                  max-width: 45px;
+                  display: block;
+                  margin: auto;
+                "
+              />
+            </div>
+            <div class="pure-u-3-4">
+              <div class="idiom-title">ALLUVIAL DIAGRAM</div>
+              <div class="idiom-subtitle">Explanation J</div>
+              <div
+                id="alluvial_diagram"
+                style="margin-left: -4.5%; margin-top: 10px"
+              ></div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="line-break"
+          style="margin-top: -20px"
+        ></div>
+
+        <div class="pure-u-1-2 footer" style="margin-top: -20px">
           <div class="pure-u-3-4">
-            <div class="idiom-title">CHOROPLETH MAP</div>
-            <div class="idiom-subtitle">Explanation E</div>
-            <div
-              id="choropleth_map"
-              style="margin-left: -0.5%; margin-top: 15px"
-            ></div>
+            <p>
+              Data Sources:<br />
+              <a
+                href="https://www.kaggle.com/datasets/yusufglcan/country-data"
+                target="_blank"
+              >
+                https://www.kaggle.com/datasets/yusufglcan/country-data </a
+              ><br />
+              <a
+                href="https://ourworldindata.org/grapher/world-bank-income-groups"
+                target="_blank"
+              >
+                https://ourworldindata.org/grapher/world-bank-income-groups
+              </a>
+            </p>
           </div>
-        </div>
-
-        <div class="pure-u-1-2 idiom">
-          <div class="pure-u-1-8">
-            <img
-              src="2.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
-          </div>
-          <div class="pure-u-3-4">
-            <div class="idiom-title">BUBBLE PLOT</div>
-            <div class="idiom-subtitle">Explanation F</div>
-            <div
-              id="bubble_plot"
-              style="margin-left: -0.5%; margin-top: 10px"
-            ></div>
-          </div>
-        </div>
-
-        <div class="pure-u-1-1 idiom">
-          <div class="pure-u-1-8" style="margin-left: -55px">
-            <img
-              src="3.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
-          </div>
-          <div class="pure-u-1-2" style="margin-left: -55px">
-            <div class="idiom-title">BUMP CHART</div>
-            <div class="idiom-subtitle">Explanation G</div>
-            <div
-              id="bump_chart"
-              style="margin-left: -0.5%; margin-top: 10px"
-            ></div>
-          </div>
-        </div>
-
-        <div class="pure-u-1-1 idiom">
-          <div class="pure-u-1-8" style="margin-left: -55px">
-            <img
-              src="4.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
-          </div>
-          <div class="pure-u-1-2" style="margin-left: -55px">
-            <div class="idiom-title">LINE CHART</div>
-            <div class="idiom-subtitle">Explanation H</div>
-            <div
-              id="line_chart"
-              style="margin-left: -0.5%; margin-top: 10px"
-            ></div>
-          </div>
-        </div>
-
-        <div class="pure-u-1-2 idiom">
-          <div class="pure-u-1-8">
-            <img
-              src="5.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
-          </div>
-          <div class="pure-u-3-4">
-            <div class="idiom-title">STACKED CHART</div>
-            <div class="idiom-subtitle">Explanation I</div>
-            <div
-              id="stacked_chart"
-              style="margin-left: -0.5%; margin-top: 10px"
-            ></div>
-          </div>
-        </div>
-
-        <div class="pure-u-1-2 idiom" ; style="margin-bottom: -100px">
-          <div class="pure-u-1-8">
-            <img
-              src="6.png"
-              style="width: 100%; max-width: 45px; display: block; margin: auto"
-            />
-          </div>
-          <div class="pure-u-3-4">
-            <div class="idiom-title">ALLUVIAL DIAGRAM</div>
-            <div class="idiom-subtitle">Explanation J</div>
-            <div
-              id="alluvial_diagram"
-              style="margin-left: -4.5%; margin-top: 10px"
-            ></div>
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="line-break"
-        style="margin: -10px auto; margin-bottom: 20px"
-      ></div>
-
-      <div class="pure-u-1-2 footer">
-        <div class="pure-u-3-4">
-          <p>
-            Data Sources:<br />
-            <a
-              href="https://www.kaggle.com/datasets/yusufglcan/country-data"
-              target="_blank"
-            >
-              https://www.kaggle.com/datasets/yusufglcan/country-data </a
-            ><br />
-            <a
-              href="https://ourworldindata.org/grapher/world-bank-income-groups"
-              target="_blank"
-            >
-              https://ourworldindata.org/grapher/world-bank-income-groups
-            </a>
-          </p>
         </div>
       </div>
     </div>
