--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="pure-g">
         <div class="pure-u-1-2 footer">
-          <div class="pure-u-3-4" style="margin-left: 115%">
+          <div class="pure-u-3-4" style="margin-left: 117%">
             <p>
               Yee Khai Wei | 32846398 | Tutorial 03 | Dr Grace Ting Chai Wen |
               Data Visualisation 2 | 2024
@@ -54,7 +54,7 @@
         </div>
 
         <div class="pure-u-1">
-          <div class="page-title" style="margin-top: 20px">
+          <div class="page-title" style="margin-top: 50px">
             GROSS DOMESTIC PRODUCT (GDP)
           </div>
         </div>
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="line-break"></div>
+        <div class="line-break" style="margin-left: 0.5%"></div>
 
         <div class="content">
           <div class="pure-u-1-2 idiom">
@@ -212,6 +212,7 @@
 
         <div
           class="line-break"
+          style="margin-left: 0.5%"
           style="margin-top: -20px"
         ></div>
 
@@ -219,12 +220,14 @@
           <div class="pure-u-3-4">
             <p>
               Data Sources:<br />
+              Gülcan, Y. (2023). World Bank Data on Countries [Data set]. Kaggle.
               <a
                 href="https://www.kaggle.com/datasets/yusufglcan/country-data"
                 target="_blank"
               >
                 https://www.kaggle.com/datasets/yusufglcan/country-data </a
               ><br />
+              World Bank (2024). World Bank Income Groups [Data set]. Our World In Data.
               <a
                 href="https://ourworldindata.org/grapher/world-bank-income-groups"
                 target="_blank"
