Update webpage files

--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
 
         <div
           class="line-break"
-          style="margin-left: 0.5%"
-          style="margin-top: -20px"
+          style="margin-left: 0.5%; margin-top: -10px"
         ></div>
 
         <div class="pure-u-1-2 footer" style="margin-top: -20px">
