--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="pure-g">
         <div class="pure-u-1-2 footer">
-          <div class="pure-u-3-4" style="margin-left: 115%">
+          <div class="pure-u-3-4" style="margin-left: 128%">
             <p>
               Yee Khai Wei | 32846398 | Tutorial 03 | Dr Grace Ting Chai Wen |
               Data Visualisation 2 | 2024
@@ -54,27 +54,27 @@
         </div>
 
         <div class="pure-u-1">
-          <div class="page-title" style="margin-top: 50px">
+          <div class="page-title" style="margin-top: 25px">
             GROSS DOMESTIC PRODUCT (GDP)
           </div>
         </div>
 
         <div class="pure-u-1-2">
           <div class="pure-u-1-8"></div>
-          <div class="pure-u-3-4" style="margin-left: -14%">
+          <div class="pure-u-3-4">
             <div class="page-title-description">Explanation A</div>
             <div class="page-title-description">Explanation B</div>
           </div>
         </div>
         <div class="pure-u-1-2">
           <div class="pure-u-1-8"></div>
-          <div class="pure-u-3-4" style="margin-left: -28%">
+          <div class="pure-u-3-4" style="margin-left: 5%">
             <div class="page-title-description">Explanation C</div>
             <div class="page-title-description">Explanation D</div>
           </div>
         </div>
 
-        <div class="line-break" style="margin-left: 0.5%"></div>
+        <div class="line-break"></div>
 
         <div class="content">
           <div class="pure-u-1-2 idiom">
@@ -83,9 +83,9 @@
                 src="1.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -94,7 +94,7 @@
               <div class="idiom-subtitle">Explanation E</div>
               <div
                 id="choropleth_map"
-                style="margin-left: -0.5%; margin-top: -70px"
+                style="margin-left: -0.5%; margin-top: -55px"
               ></div>
             </div>
           </div>
@@ -105,9 +105,9 @@
                 src="2.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -127,9 +127,9 @@
                 src="3.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -149,9 +149,9 @@
                 src="4.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -171,9 +171,9 @@
                 src="5.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -193,9 +193,9 @@
                 src="6.png"
                 style="
                   width: 100%;
-                  max-width: 45px;
+                  max-width: 40px;
                   display: block;
-                  margin: auto;
+                  margin-left: 40%;
                 "
               />
             </div>
@@ -210,23 +210,22 @@
           </div>
         </div>
 
-        <div
-          class="line-break"
-          style="margin-left: 0.5%; margin-top: -10px"
-        ></div>
+        <div class="line-break" style="margin-top: -10px"></div>
 
-        <div class="pure-u-1-2 footer" style="margin-top: -20px">
+        <div class="pure-u-1-2 footer" style="margin-top: -40px">
           <div class="pure-u-3-4">
             <p>
               Data Sources:<br />
-              Gülcan, Y. (2023). World Bank Data on Countries [Data set]. Kaggle.
+              Gülcan, Y. (2023). World Bank Data on Countries [Data set].
+              Kaggle.
               <a
                 href="https://www.kaggle.com/datasets/yusufglcan/country-data"
                 target="_blank"
               >
                 https://www.kaggle.com/datasets/yusufglcan/country-data </a
               ><br />
-              World Bank (2024). World Bank Income Groups [Data set]. Our World In Data.
+              World Bank (2024). World Bank Income Groups [Data set]. Our World
+              In Data.
               <a
                 href="https://ourworldindata.org/grapher/world-bank-income-groups"
                 target="_blank"
