Update visualization files and supporting documents

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="pure-g">
         <div class="pure-u-1-2 footer">
-          <div class="pure-u-3-4" style="margin-left: 128%">
+          <div class="pure-u-3-4" style="margin-left: 127%">
             <p>
               Yee Khai Wei | 32846398 | Tutorial 03 | Dr Grace Ting Chai Wen |
               Data Visualisation 2 | 2024
@@ -61,20 +61,53 @@
 
         <div class="pure-u-1-2">
           <div class="pure-u-1-8"></div>
-          <div class="pure-u-3-4">
-            <div class="page-title-description">Explanation A</div>
-            <div class="page-title-description">Explanation B</div>
+          <div class="pure-u-3-4" style="margin-left: -1%">
+            <div class="page-title-description">
+              <span class="bold">Gross Domestic Product (GDP)</span> measures
+              the <span class="bold">total value</span> of goods and services
+              produced within a country's borders in a specific time period,
+              serving as a <span class="bold">key indicator</span> of
+              <span class="bold">economic health</span>,
+              <span class="bold">productivity</span>, and
+              <span class="bold">growth potential</span>.
+            </div>
+            <div class="page-title-description">
+              When analyzing GDP, factors like
+              <span class="bold">population size</span> and
+              <span class="bold">land area</span> play crucial roles,
+              influencing a country's
+              <span class="bold">production capacity</span>,
+              <span class="bold">resource availability</span>, and
+              <span class="bold">market size</span>, thus shaping its overall
+              <span class="bold">economic performance</span>.
+            </div>
           </div>
         </div>
         <div class="pure-u-1-2">
           <div class="pure-u-1-8"></div>
-          <div class="pure-u-3-4" style="margin-left: 5%">
-            <div class="page-title-description">Explanation C</div>
-            <div class="page-title-description">Explanation D</div>
+          <div class="pure-u-3-4" style="margin-left: 1%">
+            <div class="page-title-description">
+              Expanding this analysis to a
+              <span class="bold">continental level</span> allows for comparison
+              of <span class="bold">economic trends</span> across large
+              geographical regions, revealing
+              <span class="bold">global patterns</span> and
+              <span class="bold">development disparities</span> that individual
+              country data might not show.
+            </div>
+            <div class="page-title-description">
+              By studying these <span class="bold">GDP patterns</span> across
+              countries and continents, we can inform
+              <span class="bold">policy decisions</span>, identify areas for
+              <span class="bold">economic improvement</span>, and guide
+              <span class="bold">international development strategies</span>,
+              ultimately working towards a more
+              <span class="bold">balanced global economy</span>.
+            </div>
           </div>
         </div>
 
-        <div class="line-break"></div>
+        <div class="line-break" style="margin-top: 35px"></div>
 
         <div class="content">
           <div class="pure-u-1-2 idiom">
@@ -86,12 +119,28 @@
                   max-width: 40px;
                   display: block;
                   margin-left: 40%;
+                  margin-top: 15%;
                 "
               />
             </div>
             <div class="pure-u-3-4">
-              <div class="idiom-title">CHOROPLETH MAP</div>
-              <div class="idiom-subtitle">Explanation E</div>
+              <div class="idiom-title">
+                GLOBAL ECONOMIC DISPARITIES IN GDP PER CAPITA (2000-2022)
+              </div>
+              <div class="idiom-subtitle">
+                <span class="bold">North America</span> and
+                <span class="bold">Oceania</span> maintain
+                <span class="bold">economic dominance</span>, while
+                <span class="bold">Asia</span>,
+                <span class="bold">South America</span>, and
+                <span class="bold">Africa</span> show
+                <span class="bold">limited growth</span> over two decades,
+                highlighting enduring
+                <span class="bold">global wealth disparities</span>.
+                <span class="bold">Europe</span> displays
+                <span class="bold">mixed economic performance</span>, with
+                notable <span class="bold">East-West divide</span>.
+              </div>
               <div
                 id="choropleth_map"
                 style="margin-left: -0.5%; margin-top: -55px"
@@ -108,12 +157,28 @@
                   max-width: 40px;
                   display: block;
                   margin-left: 40%;
+                  margin-top: 15%;
                 "
               />
             </div>
             <div class="pure-u-3-4">
-              <div class="idiom-title">BUBBLE PLOT</div>
-              <div class="idiom-subtitle">Explanation F</div>
+              <div class="idiom-title">
+                POPULATION, LAND AREA, AND GDP DISTRIBUTION (2000-2022)
+              </div>
+              <div class="idiom-subtitle">
+                <span class="bold">United States</span>,
+                <span class="bold">China</span>, and
+                <span class="bold">India</span> dominate in
+                <span class="bold">population</span> and
+                <span class="bold">GDP</span>, while smaller nations like
+                <span class="bold">Nauru</span> and
+                <span class="bold">Tuvalu</span> lag significantly. A
+                <span class="bold">positive correlation</span> exists between
+                <span class="bold">population size</span> and
+                <span class="bold">GDP</span>, with
+                <span class="bold">larger countries</span> generally having
+                <span class="bold">higher economic output</span>.
+              </div>
               <div
                 id="bubble_plot"
                 style="margin-left: -0.5%; margin-top: 10px"
@@ -122,7 +187,7 @@
           </div>
 
           <div class="pure-u-1-1 idiom">
-            <div class="pure-u-1-8" style="margin-left: -55px">
+            <div class="pure-u-1-8" style="margin-left: -30px">
               <img
                 src="3.png"
                 style="
@@ -130,21 +195,54 @@
                   max-width: 40px;
                   display: block;
                   margin-left: 40%;
+                  margin-top: 10%;
                 "
               />
             </div>
-            <div class="pure-u-1-2" style="margin-left: -55px">
-              <div class="idiom-title">BUMP CHART</div>
-              <div class="idiom-subtitle">Explanation G</div>
+            <div class="pure-u-1-2" style="margin-left: -60px">
+              <div class="idiom-title">
+                TOP COUNTRIES BY GDP PER CAPITA <br />RANKINGS (2012-2022)
+              </div>
+
+              <div class="idiom-subtitle">
+                <span class="bold purple">Monaco</span> and
+                <span class="bold light-purple">Liechtenstein</span>
+                consistently <span class="bold">dominate</span> the top spots.
+                The <span class="bold">top 5</span> <br />remain
+                <span class="bold">relatively stable</span>, with
+                <span class="bold light-brown">Norway</span> dropping after 2014
+                before <br /><span class="bold">rebounding</span> by 2022.
+                <span class="bold">Lower rankings</span> show
+                <span class="bold">considerable fluctuation</span>,
+                <br />indicating
+                <span class="bold">economic volatility</span> among wealthy
+                nations.
+              </div>
+
               <div
-                id="bump_chart"
-                style="margin-left: -0.5%; margin-top: 10px"
-              ></div>
+                class="pure-u-1"
+                style="margin-left: 93%; margin-top: -115px"
+              >
+                <div class="idiom-subtitle">
+                  <span class="bold">City-states</span> and
+                  <span class="bold">small countries</span> dominate the
+                  <span class="bold">top rankings</span>.
+                  <span class="bold">European nations</span> <br />feature
+                  prominently, with
+                  <span class="bold brown">Luxembourg</span> and
+                  <span class="bold light-brown">Norway</span> showing
+                  <span class="bold">strong <br />performances</span>. Rankings
+                  reflect <span class="bold">global economic shifts</span> and
+                  <span class="bold">policy changes</span> <br />over the
+                  decade.
+                </div>
+              </div>
+              <div id="bump_chart" style="margin-left: -0.5%"></div>
             </div>
           </div>
 
           <div class="pure-u-1-1 idiom">
-            <div class="pure-u-1-8" style="margin-left: -55px">
+            <div class="pure-u-1-8" style="margin-left: -30px">
               <img
                 src="4.png"
                 style="
@@ -152,16 +250,45 @@
                   max-width: 40px;
                   display: block;
                   margin-left: 40%;
+                  margin-top: 10%;
                 "
               />
             </div>
-            <div class="pure-u-1-2" style="margin-left: -55px">
-              <div class="idiom-title">LINE CHART</div>
-              <div class="idiom-subtitle">Explanation H</div>
+            <div class="pure-u-1-2" style="margin-left: -60px">
+              <div class="idiom-title">
+                GDP PER CAPITA OF MALAYSIA AND <br />WORLD AVERAGE (2000-2022)
+              </div>
+              <div class="pure-u-1">
+                <div class="idiom-subtitle">
+                  <span class="bold brown">Malaysia's GDP per capita</span>
+                  consistently remains at
+                  <span class="bold">approximately half</span> the <br /><span
+                    class="bold purple"
+                    >worldwide average</span
+                  >. Both show
+                  <span class="bold">similar growth trajectories</span> over
+                  most of the <br />period, indicating
+                  <span class="bold">parallel economic development</span>
+                  patterns across two <br />decades.
+                </div>
+              </div>
               <div
-                id="line_chart"
-                style="margin-left: -0.5%; margin-top: 10px"
-              ></div>
+                class="pure-u-1"
+                style="margin-left: 93%; margin-top: -115px"
+              >
+                <div class="idiom-subtitle">
+                  A notable <span class="bold">divergence</span> occurs from
+                  <span class="bold">2020-2022</span>, where
+                  <span class="bold brown">Malaysia</span> experiences
+                  <br /><span class="bold">continuous growth</span>, while the
+                  <span class="bold purple">worldwide average</span> shows a
+                  <span class="bold">rapid rise</span> followed <br />by a
+                  <span class="bold">modest decline</span>, possibly reflecting
+                  <span class="bold">differing pandemic responses</span> and
+                  <br />economic resilience.
+                </div>
+              </div>
+              <div id="line_chart" style="margin-left: -0.5%"></div>
             </div>
           </div>
 
@@ -173,13 +300,34 @@
                   width: 100%;
                   max-width: 40px;
                   display: block;
-                  margin-left: 40%;
+                  margin-left: 45%;
+                  margin-top: 18%;
                 "
               />
             </div>
             <div class="pure-u-3-4">
-              <div class="idiom-title">STACKED CHART</div>
-              <div class="idiom-subtitle">Explanation I</div>
+              <div class="idiom-title">
+                COUNTRIES <span class="purple bold">ABOVE</span>/<span
+                  class="brown bold"
+                  >BELOW</span
+                >
+                WORLD GDP AVERAGE BY CONTINENT
+              </div>
+              <div class="idiom-subtitle">
+                <span class="bold">Europe</span> has the
+                <span class="bold purple">most countries above</span>
+                world average GDP per capita.
+                <span class="bold">Africa</span> and
+                <span class="bold">South America</span> are
+                <span class="bold brown">all below</span>.
+                <span class="bold">Asia</span> and
+                <span class="bold">Oceania</span> show
+                <span class="bold brown">more below-average</span>
+                countries. <span class="bold">North America</span> is most
+                <span class="bold">balanced</span>. This reveals
+                <span class="bold">significant economic disparities</span>
+                across continents.
+              </div>
               <div
                 id="stacked_chart"
                 style="margin-left: -0.5%; margin-top: 10px"
@@ -196,12 +344,28 @@
                   max-width: 40px;
                   display: block;
                   margin-left: 40%;
+                  margin-top: 16%;
                 "
               />
             </div>
             <div class="pure-u-3-4">
-              <div class="idiom-title">ALLUVIAL DIAGRAM</div>
-              <div class="idiom-subtitle">Explanation J</div>
+              <div class="idiom-title">
+                CONTINENTAL DISTRIBUTION OF COUNTRY INCOME GROUPS
+              </div>
+              <div class="idiom-subtitle">
+                <span class="bold lighter-purple">Europe</span>
+                <span class="bold">dominates</span> the
+                <span class="bold dark-pink">high-income</span> category, while
+                <span class="bold purple">Africa</span> leads in
+                <span class="bold light-pink">low-income</span> countries.
+                <span class="bold light-purple">Asia</span> spans
+                <span class="bold">all income levels</span>.
+                <span class="bold">Middle-income groups</span> show
+                <span class="bold">balanced distribution</span> across
+                continents, reflecting
+                <span class="bold">varied economic development</span> stages
+                globally.
+              </div>
               <div
                 id="alluvial_diagram"
                 style="margin-left: -4.5%; margin-top: 10px"
