Update visualization files and alluvial_diagram.vg.json

--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
                 CONTINENTAL DISTRIBUTION OF COUNTRY INCOME GROUPS
               </div>
               <div class="idiom-subtitle">
-                <span class="bold lighter-purple">Europe</span>
+                <span class="bold">Europe</span>
                 <span class="bold">dominates</span> the
                 <span class="bold dark-pink">high-income</span> category, while
-                <span class="bold purple">Africa</span> leads in
-                <span class="bold light-pink">low-income</span> countries.
-                <span class="bold light-purple">Asia</span> spans
+                <span class="bold">Africa</span> leads in
+                <span class="bold pink">low-income</span> countries.
+                <span class="bold">Asia</span> spans
                 <span class="bold">all income levels</span>.
                 <span class="bold">Middle-income groups</span> show
                 <span class="bold">balanced distribution</span> across
