Update index.html file

--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
             </div>
             <div class="pure-u-1-2" style="margin-left: -60px">
               <div class="idiom-title">
-                GDP PER CAPITA OF MALAYSIA AND <br />WORLD AVERAGE (2000-2022)
+                GDP PER CAPITA OF <span class="bold brown">MALAYSIA</span> AND
+                <br /><span class="bold purple">WORLD AVERAGE</span> (2000-2022)
               </div>
               <div class="pure-u-1">
                 <div class="idiom-subtitle">
